--- a/src/main/resources/templates/product/order.html
+++ b/src/main/resources/templates/product/order.html
@@ -111,21 +111,21 @@
 
         <div class="point-usage">
           <label for="inputPoint" class="point-label">포인트 사용:</label>
-          <input type="text" name="usedPoint" id="inputPoint" placeholder="사용할 포인트 입력" />
-          <button type="button" class="btn-apply">사용하기</button>
+          <input type="number" name="usedPoint" id="inputPoint" placeholder="사용할 포인트 입력" readonly oninput="validatePoints()"/>
+          <button type="button" class="btn-apply" onclick="applyPoints()">사용하기</button>
           <p class="point-info">* 포인트 5,000점 이상 사용 가능합니다.</p>
         </div>
 <!--    쿠폰리스트 출력화면 (도영) 2024/11/03   -->
         <div class="coupon-usage" th:if="${couponTakeList != null and !#lists.isEmpty(couponTakeList)}">
           <p class="coupon-label">쿠폰 적용:</p>
-          <select name="couponId">
-            <option value="">쿠폰선택</option>
-            <!-- couponTakeList를 반복하여 option 항목 생성 -->
+          <select name="takecoupon" id="takecoupon">
+            <option value="" data-discount="0" data-type="none">쿠폰선택</option>
             <option th:each="coupon : ${couponTakeList}"
                     th:value="${coupon.couponTakenId}"
+                    th:data-discount="${coupon.coupon.coupondiscount}"
                     th:text="${coupon.coupon.couponname}">쿠폰 이름</option>
           </select>
-          <button type="button" class="btn-apply">사용하기</button>
+          <button type="button" class="coupon-apply">사용하기</button>
         </div>
       </section>
 
@@ -149,8 +149,9 @@
         <table>
           <tr><td>상품수</td><td id="prodCount" th:text="${finalOrderSummary.totalQuantity}">1</td></tr>
           <tr><td>상품금액</td><td id="prodCost" th:text="${finalOrderSummary.totalOriginalPrice}">27,000원</td></tr>
-          <tr><td>할인금액</td><td id="prodDis" th:text="${-finalOrderSummary.totalDiscount}">-1,350원</td></tr>
+          <tr><td>할인금액</td><td id="prodDis" th:text="${-finalOrderSummary.totalDiscount} +'원'">-1,350원</td></tr>
           <tr><td>배송비</td><td id="prodFee" th:text="${finalOrderSummary.totalDeliveryFee > 0 ? finalOrderSummary.totalDeliveryFee + '원' : '무료'}">0원</td></tr>
+          <tr><td>쿠폰 할인</td><td id="couponDiscount" >-원</td></tr>
           <tr><td>포인트 할인</td><td id="prodPoint" >-원</td></tr>
           <tr><td class="total-label">전체주문금액</td><td name="total" id="total" th:text="${finalOrderSummary.totalOrderAmount}" class="total-amount">24,650원</td></tr>
           <tr><td>적립 포인트</td><td id="getPoint"  th:text="${finalOrderSummary.totalEarnedPoints}">270</td></tr>
