--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -84,6 +84,7 @@
 /*유정*/
 .deliveryInsertModal-content,
 .couponinfomodal-content,
+.couponchangemodal-content,
 .couponinsertmodal-content{
     height: 540px;
     width: 700px;
