--- a/src/main/resources/templates/admin/include/admin_sidebar.html
+++ b/src/main/resources/templates/admin/include/admin_sidebar.html
@@ -5,6 +5,7 @@
 
   수정이력
   - 2024/11/04 이도영 사용자 권한에 따른 버튼 설정
+  - 2024/11/05 이도영 사용자 권한에 따른 버튼 설정(포인트 관리 삭제)
 -->
 <aside th:fragment="admin_sidebar">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -36,9 +37,6 @@
         <li><a th:href="@{/admin/member/list}" class="list"><i class="fas fa-user-friends"></i> 회원목록</a></li>
         <li><a th:href="@{/admin/member/point}" class="point"><i class="fas fa-star"></i> 포인트관리</a></li>
       </ol>
-    </li>
-    <li th:if="${role == 'Seller'}">
-      <a th:href="@{/admin/member/point}" class="point"><i class="fas fa-star"></i> 포인트관리</a>
     </li>
     <li>
       <a href="#"><i class="fas fa-box-open" aria-hidden="true"></i> 상품관리</a>
