--- a/src/main/resources/templates/admin/product/edit.html
+++ b/src/main/resources/templates/admin/product/edit.html
@@ -1,198 +1,212 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{admin/layout/adminlayout}">
 
-<!-- 스타일 CSS 연결 -->
-<th:block layout:fragment="css">
-    <link rel="stylesheet" th:href="@{/css/admin/product/edit.css}" />
-</th:block>
+<head>
+    <th:block layout:fragment="css">
+        <link rel="stylesheet" th:href="@{/css/admin/product/edit.css}" />
+    </th:block>
+    <!-- index.html 고유 스크립트 추가 -->
+    <th:block layout:fragment="script">
+        <script type="text/javascript" th:src="@{/js/admin/product/edit.js}"></script>
+        <script type="text/javascript" th:src="@{/js/admin/product/register.js}"></script>
+    </th:block>
+</head>
 
-<!-- index.html 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
-    <script type="text/javascript" th:src="@{/js/admin/product/edit.js}"></script>
-</th:block>
-
+<body>
 <div class="content" layout:fragment="content">
     <div class="dashboard">
-        <div class="content_header">
-            <h1>상품 수정</h1>
-            <p>HOME > 상품관리 > 상품 수정</p>
-        </div>
+        <h1>상품 수정</h1>
+
+        <!-- 탭 네비게이션 -->
+        <ul class="tab-nav">
+            <li onclick="showTab('basicInfo')">기본 정보</li>
+            <li onclick="showTab('category')">카테고리</li>
+            <li onclick="showTab('images')">상품 이미지</li>
+            <li onclick="showTab('options')">옵션</li>
+            <li onclick="showTab('ecommerceInfo')">전자상거래 정보</li>
+        </ul>
 
         <!-- 상품 수정 폼 -->
         <form id="editProductForm" method="POST" th:action="@{/admin/product/update}" enctype="multipart/form-data">
-            <input type="hidden" name="id" th:value="${product.id}"/>
-
-            <!-- 기본 정보 -->
-            <div class="section">
+            <input type="hidden" name="id" th:value="${product.id}" />
+            <!-- 기본 정보 탭 -->
+            <div id="basicInfo" class="tab-content">
                 <h2>기본 정보</h2>
-                <table class="form-table">
-                    <tr>
-                        <td><label for="productName">상품명</label></td>
-                        <td><input type="text" id="productName" name="productName" th:value="${product.productName}" required></td>
-                    </tr>
-                    <tr>
-                        <td><label for="description">설명</label></td>
-                        <td><input type="text" id="description" name="description" th:value="${product.description}" required></td>
-                    </tr>
-                    <tr>
-                        <td><label for="manufacturer">제조사</label></td>
-                        <td><input type="text" id="manufacturer" name="manufacturer" th:value="${product.manufacturer}" required></td>
-                    </tr>
-                    <tr>
-                        <td><label for="price">상품금액</label></td>
-                        <td><input type="number" id="price" name="price" th:value="${product.price}" required></td>
-                    </tr>
-                    <tr>
-                        <td><label for="discountRate">할인율</label></td>
-                        <td><input type="number" id="discountRate" name="discountRate" th:value="${product.discountRate}"></td>
-                    </tr>
-                    <tr>
-                        <td><label for="point">포인트</label></td>
-                        <td><input type="number" id="point" name="point" th:value="${product.point}" readonly /></td>
-                    </tr>
-                    <tr>
-                        <td><label for="stock">재고</label></td>
-                        <td><input type="number" id="stock" name="stock" th:value="${product.stock}" required/></td>
-                    </tr>
-                    <tr>
-                        <td><label for="deliveryFee">배송비</label></td>
-                        <td><input type="number" id="deliveryFee" name="deliveryFee" th:value="${product.deliveryFee}"></td>
-                    </tr>
-                </table>
-            </div>
 
-            <!-- 카테고리 선택 -->
-            <div class="section">
-                <h2>카테고리</h2>
-                <table class="form-table">
-                    <tr>
-                        <td><label for="category1">1차 카테고리</label></td>
-                        <td>
-                            <select id="category1" onchange="loadSubCategories(this.value, 'category2')">
-                                <option value="">1차 카테고리 선택</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="category2">2차 카테고리</label></td>
-                        <td>
-                            <select id="category2" onchange="loadSubCategories(this.value, 'category3')">
-                                <option value="">2차 카테고리 선택</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="category3">3차 카테고리</label></td>
-                        <td>
-                            <select id="category3" name="categoryId">
-                                <option value="">3차 카테고리 선택</option>
-                            </select>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+                <div class="form-group">
+                    <label for="productName">상품명</label>
+                    <div class="input-container">
+                        <i class="fas fa-box"></i>
+                        <input type="text" id="productName" name="productName" th:value="${product.productName}" required>
+                    </div>
+                </div>
 
-            <!-- 상품 이미지 -->
-            <div class="section">
-                <h2>상품 이미지</h2>
-                <table class="form-table">
-                    <tr>
-                        <td><label for="productImg1">상품 이미지 (목록용)</label></td>
-                        <td>
-                            <input type="file" id="productImg1" name="productImg1">
-                            <img th:src="@{/uploads/product/}+${product.productImg1}" alt="상품 이미지1" style="width: 70px; height: 70px;">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="productImg2">상품 이미지 (상세용)</label></td>
-                        <td>
-                            <input type="file" id="productImg2" name="productImg2">
-                            <img th:src="@{/uploads/product/}+${product.productImg2}" alt="상품 이미지2" style="width: 100px; height: 100px;">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="productImg3">상품 이미지 (추가)</label></td>
-                        <td>
-                            <input type="file" id="productImg3" name="productImg3">
-                            <img th:src="@{/uploads/product/}+${product.productImg3}" alt="상품 이미지3" style="width: 100px; height: 100px;">
-                        </td>
-                    </tr>
-                </table>
-            </div>
+                <div class="form-group">
+                    <label for="description">기본설명</label>
+                    <div class="input-container">
+                        <i class="fas fa-info-circle"></i>
+                        <input type="text" id="description" name="description" th:value="${product.description}" required>
+                    </div>
+                </div>
 
-            <!-- 옵션 선택 -->
-            <div class="section">
-                <h2>옵션</h2>
-                <p>상품에 옵션이 있습니까?</p>
-                <select id="hasOption" name="hasOption" onchange="toggleOptionSections()">
-                    <option value="true" th:selected="${product.hasOptions}">예</option>
-                    <option value="false" th:selected="${!product.hasOptions}">아니오</option>
-                </select>
+                <div class="form-group">
+                    <label for="manufacturer">제조사</label>
+                    <div class="input-container">
+                        <i class="fas fa-industry"></i>
+                        <input type="text" id="manufacturer" name="manufacturer" th:value="${product.manufacturer}" required>
+                    </div>
+                </div>
 
-                <!-- 옵션 관리 섹션 -->
-                <div id="optionSection" style="display: none;">
-                    <table class="form-table" id="optionTable">
-                        <thead>
-                        <tr>
-                            <th>옵션명</th>
-                            <th>옵션값</th>
-                            <th>삭제</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="option : ${product.productOptions}">
-                            <td><input type="text" name="optionName[]" th:value="${option.name}" /></td>
-                            <td><input type="text" name="optionValues[]" th:value="${option.values}" /></td>
-                            <td><button type="button" onclick="removeOption(this)">삭제</button></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <button type="button" onclick="addOption()">옵션 추가</button>
+                <div class="form-group">
+                    <label for="price">상품금액</label>
+                    <div class="input-container">
+                        <i class="fas fa-dollar-sign"></i>
+                        <input type="number" id="price" name="price" th:value="${product.price}" oninput="calculateDiscount()" required>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="discountRate">할인율 (%)</label>
+                    <div class="input-container">
+                        <i class="fas fa-percentage"></i>
+                        <input type="number" id="discountRate" name="discountRate" th:value="${product.discountRate}" oninput="calculateDiscount()">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="point">포인트</label>
+                    <div class="input-container">
+                        <i class="fas fa-gift"></i>
+                        <input type="number" id="point" name="point" readonly placeholder="포인트 자동 계산" th:value="${product.point}">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="stockCount">재고수량</label>
+                    <div class="input-container">
+                        <i class="fas fa-warehouse"></i>
+                        <input type="number" id="stockCount" name="stock" th:value="${product.stock}" required>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="deliveryFee">배송비</label>
+                    <div class="input-container">
+                        <i class="fas fa-truck"></i>
+                        <input type="number" id="deliveryFee" name="deliveryFee" th:value="${product.deliveryFee}">
+                    </div>
+                </div>
+
+                <!-- 할인된 가격 표시 -->
+                <div class="discount-display">
+                    <p>할인가: <span id="discountedPrice">${product.price * (1 - product.discountRate / 100)}</span>원</p>
                 </div>
             </div>
 
-            <!-- 전자상거래 상품정보 -->
-            <div class="section">
-                <h2>전자상거래 상품정보 제공공시</h2>
-                <table class="form-table">
+
+
+            <!-- 카테고리 선택 탭 -->
+            <div id="category" class="tab-content" style="display: none;">
+                <h2>카테고리 선택</h2>
+                <div class="form-group">
+                    <label for="category1">1차 분류</label>
+                    <select id="category1" onchange="loadSubCategories(this.value, 'category2')">
+                        <option th:text="${product.category.getParent().getParent().name}" selected></option>
+                        <!-- 1차 카테고리 옵션 -->
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="category2">2차 분류</label>
+                    <select id="category2" onchange="loadSubCategories(this.value, 'category3')">
+                        <option th:text="${product.category.getParent().name}" selected></option>
+                        <!-- 2차 카테고리 옵션 -->
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="category3">3차 분류</label>
+                    <select id="category3" name="categoryId">
+                        <option th:text="${product.category.getName()}" selected></option>
+                        <!-- 3차 카테고리 옵션 -->
+                    </select>
+                </div>
+            </div>
+
+
+            <!-- 상품 이미지 탭 -->
+            <div id="images" class="tab-content">
+                <h2>상품 이미지</h2>
+
+                <!-- 기본 이미지 업로드 -->
+                <div class="image-upload-card">
+                    <label for="productImg1" class="upload-label">기본 이미지</label>
+                    <div class="image-preview" onclick="document.getElementById('productImg1').click();">
+                        <input type="file" id="productImg1" name="productImg1" class="file-input" onchange="previewImage(event, 'previewImg1')">
+                        <img id="previewImg1" th:src="@{|/uploads/product/${product.productImg1}|}" alt="기본 이미지" class="image-display">
+                    </div>
+                    <p class="current-image-label">현재 이미지</p>
+                </div>
+
+                <!-- 목록 이미지 업로드 -->
+                <div class="image-upload-card">
+                    <label for="productImg2" class="upload-label">목록 이미지</label>
+                    <div class="image-preview" onclick="document.getElementById('productImg2').click();">
+                        <input type="file" id="productImg2" name="productImg2" class="file-input" onchange="previewImage(event, 'previewImg2')">
+                        <img id="previewImg2" th:src="@{|/uploads/product/${product.productImg2}|}" alt="목록 이미지" class="image-display">
+                    </div>
+                    <p class="current-image-label">현재 이미지</p>
+                </div>
+
+                <!-- 상세 이미지 업로드 -->
+                <div class="image-upload-card">
+                    <label for="productImg3" class="upload-label">상세 이미지</label>
+                    <div class="image-preview" onclick="document.getElementById('productImg3').click();">
+                        <input type="file" id="productImg3" name="productImg3" class="file-input" onchange="previewImage(event, 'previewImg3')">
+                        <img id="previewImg3" th:src="@{|/uploads/product/${product.productImg3}|}" alt="상세 이미지" class="image-display">
+                    </div>
+                    <p class="current-image-label">현재 이미지</p>
+                </div>
+            </div>
+
+
+
+            <!-- 옵션 선택 탭 -->
+            <div id="options" class="tab-content" style="display:none;">
+                <h2>옵션 관리</h2>
+                <button type="button" class="add-option-btn" onclick="addOptions1()">옵션 추가</button>
+
+                <table id="optionTable">
+                    <thead>
                     <tr>
-                        <td><label for="Status">상품상태</label></td>
-                        <td><input type="text" id="Status" name="Status" th:value="${product.Status}" required /></td>
+                        <th>옵션타입</th>
+                        <th>옵션명</th>
+                        <th>옵션값</th>
+                        <th>필수</th>
+                        <th>삭제</th>
                     </tr>
-                    <tr>
-                        <td><label for="warranty">부가세 면세여부</label></td>
-                        <td><input type="text" id="warranty" name="warranty" th:value="${product.warranty}" required /></td>
-                    </tr>
-                    <tr>
-                        <td><label for="receiptIssued">영수증 발행</label></td>
-                        <td><input type="text" id="receiptIssued" name="receiptIssued" th:value="${product.receiptIssued}" required /></td>
-                    </tr>
-                    <tr>
-                        <td><label for="businessType">사업자구분</label></td>
-                        <td><input type="text" id="businessType" name="businessType" th:value="${product.businessType}" required /></td>
-                    </tr>
-                    <tr>
-                        <td><label for="origin">원산지</label></td>
-                        <td><input type="text" id="origin" name="origin" th:value="${product.origin}" required /></td>
-                    </tr>
+                    </thead>
+                    <tbody id="optionTableBody">
+                    <!-- 동적으로 추가되는 옵션 행들 -->
+                    </tbody>
                 </table>
             </div>
 
-            <!-- 저장 버튼 -->
-            <div class="submit-section">
-                <button type="submit">수정 완료</button>
+
+            <!-- 전자상거래 정보 탭 -->
+            <div id="ecommerceInfo" class="tab-content" style="display:none;">
+                <h2>전자상거래 상품정보 제공공시</h2>
+                <label>상품상태</label>
+                <input type="text" name="Status" th:value="${product.Status}" required>
+                <label>원산지</label>
+                <input type="text" name="origin" th:value="${product.origin}" required>
             </div>
+
+            <button type="submit">수정 완료</button>
         </form>
     </div>
 </div>
-
-<script type="text/javascript">
-    function toggleOptionSections() {
-        const hasOption = document.getElementById("hasOption").value;
-        document.getElementById("optionSection").style.display = hasOption === "true" ? "block" : "none";
-    }
-</script>
+</body>
 </html>
