--- a/src/main/resources/templates/admin/cs/notice/view.html
+++ b/src/main/resources/templates/admin/cs/notice/view.html
@@ -39,7 +39,7 @@
       <div style="text-align: center; margin-top: 50px">
         <input type="button" value="삭제" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"
                th:onclick="|deleteNotice(${notice.id})|" />
-        <a th:href="@{/admin/cs/notice/modify(id=${notice.id})}">
+        <a th:href="@{/admin/cs/notice/modify/{id}(id=${notice.id})}">
           <input type="button" value="수정" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
         </a>
         <a th:href="@{/admin/cs/notice/list}">
