--- a/src/main/resources/templates/admin/cs/notice/write.html
+++ b/src/main/resources/templates/admin/cs/notice/write.html
@@ -4,14 +4,13 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{admin/layout/adminlayout}">
 
-<!-- index.html 고유 CSS 추가 -->
-<th:block layout:fragment="css">
+<head>
+  <meta charset="UTF-8">
+  <title>공지사항 작성</title>
   <link rel="stylesheet" th:href="@{/css/admin/cs/notice/write.css}" />
-</th:block>
-<!-- index.html 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
-</th:block>
+</head>
 
+<body>
 <div class="content" layout:fragment="content">
   <div class="dashboard">
     <div class="content_header">
@@ -24,17 +23,21 @@
           <tr>
             <td>문의유형</td>
             <td>
-              <select name="qnaCate" onchange="firstOption()">
-                <Option>유형선택</Option>
-                <Option value="info">안내</Option>
-                <Option value="presentation">발표</Option>
+              <select name="type1" required>
+                <option value="" disabled selected>유형선택</option>
+                <option value="고객서비스">고객서비스</option>
+                <option value="안전거래">안전거래</option>
+                <option value="위해상품">위해상품</option>
+                <option value="이벤트당첨">이벤트당첨</option>
               </select>
             </td>
           </tr>
           <tr>
             <td>제목</td>
             <td>
-              <input type="text" name="title" placeholder="제목을 입력하세요." required/>
+              <input type="text" name="title" placeholder="제목을 입력하세요." required />
+              <input type="hidden" name="memberId" th:value="${uid}" />
+
             </td>
           </tr>
           <tr>
@@ -45,11 +48,14 @@
           </tr>
         </table>
         <div style="text-align: center; margin-top: 50px">
-          <a th:href="@{/admin/cs/notice/list}"><input type="button" value="취소하기" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;"/></a>
-          <input type="submit" value="등록하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;"/>
+          <a th:href="@{/admin/cs/notice/list}">
+            <input type="button" value="취소하기" style="background-color: #9e9e9e; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
+          </a>
+          <input type="submit" value="등록하기" style="background-color: #4291e9; color: white; border: none; padding: 10px 20px; cursor: pointer;" />
         </div>
       </form>
     </article>
   </div>
 </div>
+</body>
 </html>
