--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li th:each="notice : ${notices.content}">
                     <a th:href="@{/cs/layout/notice/view/{id}(id=${notice.id})}" th:text="${notice.title}" style="font-size: 17px"></a>
-                    <span th:text="${#temporals.format(notice.createdAt, 'yyyy-MM-dd')}" style="font-size: 17px"></span>
+                    <span th:text="${#temporals.format(notice.createdAt, 'yy-MM-dd')}" style="font-size: 17px"></span>
                 </li>
             </ul>
         </section>
@@ -83,7 +83,7 @@
                 <li th:each="inquiry : ${inquiries}">
                     <a th:href="@{/cs/layout/qna/view/{id}(id=${inquiry.id})}" th:text="${inquiry.title}" style="font-size: 17px;"></a>
                     <p>
-                        <span class="uid" th:text="${inquiry.memberId}">익명</span>
+                        <span class="uid" th:text="|${inquiry.memberId.substring(0, 3)}***|">익명</span>
                         <span th:text="${#temporals.format(inquiry.createdAt, 'yy-MM-dd')}" style="font-size: 17px"></span>
                     </p>
                 </li>
