--- a/src/main/resources/templates/myPage/point.html
+++ b/src/main/resources/templates/myPage/point.html
@@ -10,6 +10,7 @@
   </th:block>
   <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/my/searchPeriod.js}"></script>
+    <script type="text/javascript" th:src="@{/js/my/mypoint.js}"></script>
   </th:block>
   <section class="content" layout:fragment="content">
     <!-- 회원정보 섹션 -->
@@ -60,6 +61,7 @@
       <h3>포인트적립내역</h3>
       <table border="0" class="widthtable">
         <tr>
+          <th><input type="checkbox" name="all" onchange="toggleAllChecks(this)" /></th>
           <th>날짜</th>
           <th>구분</th>
           <th>주문번호</th>
@@ -68,13 +70,14 @@
           <th>유효기간</th>
         </tr>
         <!-- 10개 출력이나 5개만 -->
-        <tr>
-          <td>2022-12-10</td>
-          <td>적립</td>
-          <td>2022121001</td>
-          <td>340</td>
-          <td>상품 구매확정</td>
-          <td>2024-12-10</td>
+        <tr th:each="point, stat : ${points.dtoList}" class="admin_list">
+          <td><input type="checkbox" name="RowCheck" th:value="${point.id}" /></td>
+          <td th:text="${point.formattedCreatedAt}"></td> <!-- 날짜 포맷 -->
+          <td th:text="${point.transactionType.toString()}"></td>
+          <td th:text="${point.order_id != null ? point.order_id : point.type}">2022121001</td>
+          <td th:text="${point.acPoints}"></td>
+          <td th:text="${point.type}"></td>
+          <td th:text="${point.formattedExpirationDate}">2025-10-24</td>
         </tr>
 
 
@@ -83,17 +86,20 @@
       <div class="pagingBox">
         <div class="pagingList">
           <!-- 이전 버튼 -->
-          <a href="#" class="prev"></a>
+          <th:block th:if="${points.prev}">
+            <a th:href="@{/admin/member/point(pg=${points.pg - 1})}" class="prev">←</a>
+          </th:block>
 
           <!-- 페이지 링크 -->
-          <a href="#">1</a>
-          <a href="#" class="active">2</a>
-          <a href="#">3</a>
-          <a href="#">4</a>
-          <a href="#">5</a>
+          <th:block th:each="num : ${#numbers.sequence(points.start, points.end)}">
+            <a th:href="@{/admin/member/point(pg=${num})}" th:text="${num}"
+               th:classappend="${points.pg == num} ? 'active'"></a>
+          </th:block>
 
           <!-- 다음 버튼 -->
-          <a href="#" class="next">></a>
+          <th:block th:if="${points.next}">
+            <a th:href="@{/myPage/point(pg=${points.pg + 1})}" class="next">→</a>
+          </th:block>
         </div>
       </div>
 
